adjusted layout issues for skills on mobile view and added body overflow hidden for mobile as well.

--- a/css/mobile-styles.css
+++ b/css/mobile-styles.css
@@ -49,6 +49,18 @@
         margin-top: 0;
         margin-right: 0;
     }
+    
+    .skill-title{
+        font-size: 15px;
+    }
+    
+    .skills > .skill-item{
+        font-size: 12px;
+    }
+    
+    .skills-continer{
+        height: 170px;
+    }
 
 }
 
